# spin-simulation

./: CMakeLists.txt  Config.hpp.in  README.md
assets/shaders/: PhongShader.frag
include/: DynamicPolygonalLine.hpp  EulerRotationEquations.hpp  PhongShader.hpp  RungeKuttaMethod.hpp  Shapes.hpp  SpinApplication.hpp
source/: DynamicPolygonalLine.cpp  EulerRotationEquations.cpp  Main.cpp  PhongShader.cpp  Shapes.cpp  SpinApplication.cpp
